test product service